--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="banner_images/vizitka_old.png" alt="Brend vizitkasining old tomoni" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
-        </div>
+        </div> 
        <div class="portfolio-item">
             <h2>Yangi Grafik Dizayn Loyihalarim</h2>
         </div>
@@ -139,7 +139,7 @@
             <h4>1. Motivatsion Fitness Posti</h4>
             <p>Adobe Photoshop dasturida yuqori kontrastli post yaratildi. Ijtimoiy tarmoqlar uchun optimizatsiya qilingan.</p>
             <div class="banner-gallery">
-                <img src="../../moe-graficheskoye-dizayn-portfolio/Изображения/SMM_Fitness.jpg" alt="SMM Fitness Posti" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/Изображения/SMM_Fitness.jpg" alt="SMM Fitness Posti" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
 
@@ -147,7 +147,7 @@
             <h4>2. Biznes Konsalting Flayeri</h4>
             <p>Chop etish uchun tayyor (CMYK) A4 flayer dizayni. Vizual ierarxiya va kuchli chaqiriq (CTA) mavjud.</p>
             <div class="banner-gallery">
-                <img src="../../moe-graficheskoye-dizayn-portfolio/Изображения/Flayer_Design.jpg" alt="Flayer Biznes Konsalting" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/Изображения/Flayer_Design.jpg" alt="Flayer Biznes Konsalting" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
 
@@ -155,11 +155,13 @@
             <h4>3. E-Komers Chiroq Retushi</h4>
             <p>Elektron tijorat uchun mahsulotni fonsizlantirish va rang korreksiyasi (yuqori sifat).</p>
             <div class="banner-gallery">
-                <img src="../../moe-graficheskoye-dizayn-portfolio/Изображения/Chiroq_Retouch.jpg" alt="E-Komers uchun Retush" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/Изображения/Chiroq_Retouch.jpg" alt="E-Komers uchun Retush" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
+
 </section>
 </body>
 
 </html>
+
 
