--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <h4>1. Motivatsion Fitness Posti</h4>
             <p>Adobe Photoshop dasturida yuqori kontrastli post yaratildi. Ijtimoiy tarmoqlar uchun optimizatsiya qilingan.</p>
             <div class="banner-gallery">
-                <img src="/my-graphic-design-portfolio/Изображения/SMM_Fitness.jpg" alt="SMM Fitness Posti" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/images/SMM_Fitness.jpg" alt="SMM Fitness Posti" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
 
@@ -147,7 +147,7 @@
             <h4>2. Biznes Konsalting Flayeri</h4>
             <p>Chop etish uchun tayyor (CMYK) A4 flayer dizayni. Vizual ierarxiya va kuchli chaqiriq (CTA) mavjud.</p>
             <div class="banner-gallery">
-                <img src="/my-graphic-design-portfolio/Изображения/Flayer_Design.jpg" alt="Flayer Biznes Konsalting" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/images/Flayer_Design.jpg" alt="Flayer Biznes Konsalting" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
 
@@ -155,7 +155,7 @@
             <h4>3. E-Komers Chiroq Retushi</h4>
             <p>Elektron tijorat uchun mahsulotni fonsizlantirish va rang korreksiyasi (yuqori sifat).</p>
             <div class="banner-gallery">
-                <img src="/my-graphic-design-portfolio/Изображения/Chiroq_Retouch.jpg" alt="E-Komers uchun Retush" style="width: 100%; max-width: 400px; margin: 10px;">
+                <img src="/my-graphic-design-portfolio/images/Chiroq_Retouch.jpg" alt="E-Komers uchun Retush" style="width: 100%; max-width: 400px; margin: 10px;">
             </div>
         </div>
 
@@ -163,5 +163,6 @@
 </body>
 
 </html>
+
 
 
